labs/chaos-error/vs-recommendation-error-v2.yml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: recommendation
spec:
  hosts:
  - recommendation
  http:
  - route:
    - destination:
        host: recommendation
    fault:
      abort:
        httpStatus: 500
        percentage:
          value: 50.0
